<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F5E9" tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="Background image"
        android:scaleType="centerCrop"
        android:src="@drawable/p6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_description"
            android:src="@drawable/p8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            app:tint="@android:color/black" />

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="62dp"
            android:layout_height="63dp"
            android:contentDescription="Profile Picture"
            android:scaleType="centerCrop"
            android:src="@drawable/p7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/appsettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="App Settings"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintEnd_toStartOf="@id/profilePicture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext_background"
        android:drawablePadding="8dp"
        android:hint="@string/search_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888888"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="24dp">


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="#E0E0E0" />

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/p20"
                    android:contentDescription="@string/notifications_description"
                    app:tint="@android:color/black" />

                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="Turn on your location"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/locationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:thumbTint="#E5540808"
                    android:trackTint="#1DA81414"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="#E0E0E0" />

            <LinearLayout
                android:id="@+id/deleteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="29dp"
                    android:layout_height="27dp"
                    android:contentDescription="@string/language_description"
                    android:src="@drawable/p19" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="Delete my account"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="#E0E0E0" />

            <LinearLayout
                android:id="@+id/changepasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/p18"
                    android:contentDescription="@string/font_size_description"
                    app:tint="@android:color/black" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="Change password"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="#E0E0E0" />




            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="#E0E0E0" />



        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>